# auth

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  fly.toml  run_migrations.sh  run_tests_docker.sh
.github/workflows/: docker-check-master.yml  pull-request.yml
documentation/: database_schema.md  token_management.md
documentation/api/: register.md
migration/: Cargo.toml
migration/src/: lib.rs  m20250804_000001_create_auth_tables.rs  m20250807_000001_add_login_history.rs  m20250811_000001_add_refresh_token_to_tokens.rs  m20250822_000001_create_rbac_tables.rs  m20250822_000002_backfill_user_roles.rs  m20250822_000003_add_appointment_permissions.rs  m20250826_000001_add_emergency_permissions.rs  m20250826_000002_add_dashboard_permissions.rs  m20250826_000003_add_operator_role.rs  m20250906_000001_sync_user_base_role.rs  m20250906_000002_allow_multiple_user_roles.rs  m20250912_000001_add_user_search_indexes.rs  m20250917_000001_add_person_permissions.rs
scripts/: Cargo.toml
src/: main.rs
src/components/: mod.rs
src/components/auth/: local_enum.rs  mod.rs  routes.rs  services.rs
src/components/config/: services.rs
src/components/mail_send/: services.rs
src/components/tokens/: services.rs
src/components/users/: enums.rs  mod.rs  (+2 more)
src/db/: config.rs
src/entity/: mod.rs  permissions.rs  prelude.rs  role_permissions.rs  roles.rs  sessions.rs  tokens.rs  user_permission_overrides.rs  user_roles.rs  users.rs
src/http_response/: error_handler.rs  prepared_response.rs
src/utils/: helpers.rs
(+8 files in other folders)
