[package]
name = "auth"
authors = ["Nechiforel David-Samuel (nsdHSO)<nechiforelsamuel@gmail.com>"]
version = "1.17.0"
license = "MIT"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.10.2"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
env_logger = "0.11.8"
listenfd = "1.0.2"
serde = "1.0.219"
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
nanoid = "0.4.0"
sea-orm = { version = "1.1.11", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "serde_json"] }
once_cell = "1.21.3"
actix-cors = "0.7.1"
chrono-tz = "0.10.3"
regex = "1.10.2"
email_address = "0.2.9"
futures-util = "0.3.31"
argon2 = "0.5.3"
lettre = "0.11.18"
rand = "0.8.5"
base64 = "0.22.1"
jsonwebtoken = "9.3.1"
sha2 = "0.10.9"
